test/scc/decl/semantic-errors/078.a
078.t:1:20: error: '_Thread_local' specifier allowed on variable declarations only